--- a/data_enrich.ipynb
+++ b/data_enrich.ipynb
@@ -3,13 +3,14 @@
     {
       "cell_type": "code",
       "source": [
-        "import pandas as pd"
+        "import pandas as pd\n",
+        "import time"
       ],
       "metadata": {
         "id": "KAmjdWX6zJSl"
       },
       "id": "KAmjdWX6zJSl",
-      "execution_count": 3,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -20,19 +21,19 @@
       ],
       "metadata": {
         "id": "u51nzga5xoJg",
-        "outputId": "686c70a0-c38d-4308-dbf3-146e603d209c",
+        "outputId": "f5c4c3c8-9323-4f82-b62c-11eba6670289",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "id": "u51nzga5xoJg",
-      "execution_count": 4,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+            "Mounted at /content/drive\n"
           ]
         }
       ]
@@ -46,14 +47,14 @@
       ],
       "metadata": {
         "id": "AcPp6AmFx8vl",
-        "outputId": "a6df5e23-c531-4ed0-bdbc-01d3f8bc3fec",
+        "outputId": "2c12d8df-84d6-465e-cd0b-dc3a2a119e73",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
         }
       },
       "id": "AcPp6AmFx8vl",
-      "execution_count": 10,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -82,7 +83,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-003af7aa-3b99-4ca7-ba7c-18d98ba5c6a0\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-4eaea86d-b019-4608-af81-c36706357ddb\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -173,7 +174,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-003af7aa-3b99-4ca7-ba7c-18d98ba5c6a0')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-4eaea86d-b019-4608-af81-c36706357ddb')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -225,12 +226,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-003af7aa-3b99-4ca7-ba7c-18d98ba5c6a0 button.colab-df-convert');\n",
+              "        document.querySelector('#df-4eaea86d-b019-4608-af81-c36706357ddb button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-003af7aa-3b99-4ca7-ba7c-18d98ba5c6a0');\n",
+              "        const element = document.querySelector('#df-4eaea86d-b019-4608-af81-c36706357ddb');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -250,8 +251,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-aece73ef-4427-4e70-8ec2-5ff8c1acf55b\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-aece73ef-4427-4e70-8ec2-5ff8c1acf55b')\"\n",
+              "    <div id=\"df-de3ad99a-9db1-4577-8acb-ab299899cfee\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-de3ad99a-9db1-4577-8acb-ab299899cfee')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -370,7 +371,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-aece73ef-4427-4e70-8ec2-5ff8c1acf55b button');\n",
+              "            document.querySelector('#df-de3ad99a-9db1-4577-8acb-ab299899cfee button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -387,7 +388,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 3
         }
       ]
     },
@@ -399,14 +400,14 @@
       ],
       "metadata": {
         "id": "i82koUJI4s5e",
-        "outputId": "cbe6c627-e5be-4c40-f1c3-76bdd0fa05b4",
+        "outputId": "5b5acac0-cf30-4000-c066-fa8a2bd127a2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
         }
       },
       "id": "i82koUJI4s5e",
-      "execution_count": 16,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -435,7 +436,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-18ffe42b-f715-41bf-8e82-0bfbd7907a01\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-39e309f2-4d5d-41b7-8dc8-752a2c400eac\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -532,7 +533,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-18ffe42b-f715-41bf-8e82-0bfbd7907a01')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-39e309f2-4d5d-41b7-8dc8-752a2c400eac')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -584,12 +585,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-18ffe42b-f715-41bf-8e82-0bfbd7907a01 button.colab-df-convert');\n",
+              "        document.querySelector('#df-39e309f2-4d5d-41b7-8dc8-752a2c400eac button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-18ffe42b-f715-41bf-8e82-0bfbd7907a01');\n",
+              "        const element = document.querySelector('#df-39e309f2-4d5d-41b7-8dc8-752a2c400eac');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -609,8 +610,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-26f1d005-35b1-48da-9aa6-d496071412ff\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-26f1d005-35b1-48da-9aa6-d496071412ff')\"\n",
+              "    <div id=\"df-1570389f-b188-4df8-aa68-da0bc7707136\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-1570389f-b188-4df8-aa68-da0bc7707136')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -729,7 +730,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-26f1d005-35b1-48da-9aa6-d496071412ff button');\n",
+              "            document.querySelector('#df-1570389f-b188-4df8-aa68-da0bc7707136 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -746,9 +747,33 @@
             }
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 4
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "geolocator = Nominatim(user_agent=\"pollution_station_locator\")\n",
+        "def compute_latitude_longitude(row):\n",
+        "  try:\n",
+        "    location = geolocator.geocode(row['station_address'])\n",
+        "    time.sleep(300)\n",
+        "    if location:\n",
+        "        return pd.Series({'latitude': location.latitude, 'longitude': location.longitude})\n",
+        "    else:\n",
+        "        return pd.Series({'latitude': None, 'longitude': None})\n",
+        "  except:\n",
+        "    return pd.Series({'latitude': None, 'longitude': None})\n",
+        "\n",
+        "df[['latitude', 'longitude']] = df.apply(compute_latitude_longitude, axis=1)"
+      ],
+      "metadata": {
+        "id": "hzZNGXKJvW5U"
+      },
+      "id": "hzZNGXKJvW5U",
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
