--- a/data_enrich.ipynb
+++ b/data_enrich.ipynb
@@ -3,23 +3,46 @@
     {
       "cell_type": "code",
       "source": [
-        "!pip install tqdm"
+        "!pip install tqdm\n",
+        "!pip install opencage"
       ],
       "metadata": {
         "id": "TAnWF-3p1x2_",
-        "outputId": "b71683d4-2b66-4482-e131-d8eb6199e947",
+        "outputId": "6f75ac4f-7a91-435c-a175-846670de2668",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "id": "TAnWF-3p1x2_",
-      "execution_count": 7,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Requirement already satisfied: tqdm in /usr/local/lib/python3.11/dist-packages (4.67.1)\n"
+            "Requirement already satisfied: tqdm in /usr/local/lib/python3.11/dist-packages (4.67.1)\n",
+            "Collecting opencage\n",
+            "  Downloading opencage-3.2.0-py3-none-any.whl.metadata (7.9 kB)\n",
+            "Requirement already satisfied: Requests>=2.31.0 in /usr/local/lib/python3.11/dist-packages (from opencage) (2.32.3)\n",
+            "Collecting backoff>=2.2.1 (from opencage)\n",
+            "  Downloading backoff-2.2.1-py3-none-any.whl.metadata (14 kB)\n",
+            "Requirement already satisfied: tqdm>=4.66.4 in /usr/local/lib/python3.11/dist-packages (from opencage) (4.67.1)\n",
+            "Requirement already satisfied: certifi>=2024.07.04 in /usr/local/lib/python3.11/dist-packages (from opencage) (2025.6.15)\n",
+            "Requirement already satisfied: aiohttp>=3.10.5 in /usr/local/lib/python3.11/dist-packages (from opencage) (3.11.15)\n",
+            "Requirement already satisfied: aiohappyeyeballs>=2.3.0 in /usr/local/lib/python3.11/dist-packages (from aiohttp>=3.10.5->opencage) (2.6.1)\n",
+            "Requirement already satisfied: aiosignal>=1.1.2 in /usr/local/lib/python3.11/dist-packages (from aiohttp>=3.10.5->opencage) (1.3.2)\n",
+            "Requirement already satisfied: attrs>=17.3.0 in /usr/local/lib/python3.11/dist-packages (from aiohttp>=3.10.5->opencage) (25.3.0)\n",
+            "Requirement already satisfied: frozenlist>=1.1.1 in /usr/local/lib/python3.11/dist-packages (from aiohttp>=3.10.5->opencage) (1.7.0)\n",
+            "Requirement already satisfied: multidict<7.0,>=4.5 in /usr/local/lib/python3.11/dist-packages (from aiohttp>=3.10.5->opencage) (6.4.4)\n",
+            "Requirement already satisfied: propcache>=0.2.0 in /usr/local/lib/python3.11/dist-packages (from aiohttp>=3.10.5->opencage) (0.3.2)\n",
+            "Requirement already satisfied: yarl<2.0,>=1.17.0 in /usr/local/lib/python3.11/dist-packages (from aiohttp>=3.10.5->opencage) (1.20.1)\n",
+            "Requirement already satisfied: charset-normalizer<4,>=2 in /usr/local/lib/python3.11/dist-packages (from Requests>=2.31.0->opencage) (3.4.2)\n",
+            "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.11/dist-packages (from Requests>=2.31.0->opencage) (3.10)\n",
+            "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.11/dist-packages (from Requests>=2.31.0->opencage) (2.4.0)\n",
+            "Downloading opencage-3.2.0-py3-none-any.whl (23 kB)\n",
+            "Downloading backoff-2.2.1-py3-none-any.whl (15 kB)\n",
+            "Installing collected packages: backoff, opencage\n",
+            "Successfully installed backoff-2.2.1 opencage-3.2.0\n"
           ]
         }
       ]
@@ -36,7 +59,7 @@
         "id": "KAmjdWX6zJSl"
       },
       "id": "KAmjdWX6zJSl",
-      "execution_count": 8,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -47,19 +70,19 @@
       ],
       "metadata": {
         "id": "u51nzga5xoJg",
-        "outputId": "0799b793-98e7-46aa-a20b-e82ff2e38508",
+        "outputId": "56c666a3-c42b-47d3-b86e-60df2fbc2378",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "id": "u51nzga5xoJg",
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+            "Mounted at /content/drive\n"
           ]
         }
       ]
@@ -80,7 +103,7 @@
         }
       },
       "id": "AcPp6AmFx8vl",
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -433,7 +456,7 @@
         }
       },
       "id": "i82koUJI4s5e",
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -780,7 +803,6 @@
     {
       "cell_type": "code",
       "source": [
-        "geolocator = Nominatim(user_agent=\"pollution_station_locator\")\n",
         "def compute_latitude_longitude(row):\n",
         "  try:\n",
         "    location = geolocator.geocode(row['station_address'])\n",
@@ -790,8 +812,19 @@
         "    else:\n",
         "        return pd.Series({'latitude': None, 'longitude': None})\n",
         "  except:\n",
-        "    return pd.Series({'latitude': None, 'longitude': None})\n",
-        "\n",
+        "    return pd.Series({'latitude': None, 'longitude': None})"
+      ],
+      "metadata": {
+        "id": "SxpR2pBLNDpX"
+      },
+      "id": "SxpR2pBLNDpX",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "geolocator = Nominatim(user_agent=\"pollution_station_locator\")\n",
         "tqdm.pandas()\n",
         "df[['latitude', 'longitude']] = df.progress_apply(compute_latitude_longitude, axis=1)"
       ],
@@ -817,7 +850,7 @@
         "outputId": "9c892956-64ca-463c-9f79-024e482e6be3"
       },
       "id": "hzZNGXKJvW5U",
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -861,8 +894,18 @@
         "id": "PXsC7JtS-q7q"
       },
       "id": "PXsC7JtS-q7q",
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Loading intermediate data for latitude and longitude"
+      ],
+      "metadata": {
+        "id": "_-Q1YLOnNSFV"
+      },
+      "id": "_-Q1YLOnNSFV"
     },
     {
       "cell_type": "code",
@@ -881,7 +924,7 @@
         }
       },
       "id": "Yc3eWGwi_AcS",
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1272,7 +1315,7 @@
         }
       },
       "id": "iTwoK8BN_Sqy",
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1316,7 +1359,7 @@
         "id": "fe6sv6q1A8OU"
       },
       "id": "fe6sv6q1A8OU",
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1339,7 +1382,7 @@
         }
       },
       "id": "QaYNpqQgCuhg",
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
