--- a/data_enrich.ipynb
+++ b/data_enrich.ipynb
@@ -53,13 +53,15 @@
         "import pandas as pd\n",
         "import time\n",
         "from geopy.geocoders import Nominatim\n",
-        "from tqdm.notebook import tqdm"
+        "from tqdm.notebook import tqdm\n",
+        "from opencage.geocoder import OpenCageGeocode\n",
+        "from google.colab import userdata"
       ],
       "metadata": {
         "id": "KAmjdWX6zJSl"
       },
       "id": "KAmjdWX6zJSl",
-      "execution_count": 2,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -917,14 +919,14 @@
       ],
       "metadata": {
         "id": "Yc3eWGwi_AcS",
-        "outputId": "b555807c-e00a-49a4-b331-4d0ff34425ed",
+        "outputId": "256b9398-22cb-4ddf-f8e0-756c522d121c",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 206
+          "height": 417
         }
       },
       "id": "Yc3eWGwi_AcS",
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -960,7 +962,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-ccc53abc-5ddc-437c-933d-765fb59bab27\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-b7c51921-c441-4a27-9fe8-5c52a4e69b1e\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -1069,7 +1071,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ccc53abc-5ddc-437c-933d-765fb59bab27')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b7c51921-c441-4a27-9fe8-5c52a4e69b1e')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1121,12 +1123,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-ccc53abc-5ddc-437c-933d-765fb59bab27 button.colab-df-convert');\n",
+              "        document.querySelector('#df-b7c51921-c441-4a27-9fe8-5c52a4e69b1e button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-ccc53abc-5ddc-437c-933d-765fb59bab27');\n",
+              "        const element = document.querySelector('#df-b7c51921-c441-4a27-9fe8-5c52a4e69b1e');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1146,8 +1148,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-cd2e68dd-aaa8-4d90-9b50-2d4d9e10b263\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-cd2e68dd-aaa8-4d90-9b50-2d4d9e10b263')\"\n",
+              "    <div id=\"df-bfcbddb6-d84d-4fb8-9b56-6a259f9a6c02\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-bfcbddb6-d84d-4fb8-9b56-6a259f9a6c02')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -1266,7 +1268,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-cd2e68dd-aaa8-4d90-9b50-2d4d9e10b263 button');\n",
+              "            document.querySelector('#df-bfcbddb6-d84d-4fb8-9b56-6a259f9a6c02 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -1283,9 +1285,42 @@
             }
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 4
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Alternate method to get latitude and longitude"
+      ],
+      "metadata": {
+        "id": "5brc-GfuNvGX"
+      },
+      "id": "5brc-GfuNvGX"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "geocoder = OpenCageGeocode(userdata.get('OPENCAGE_API_KEY'))\n",
+        "def compute_latitude_longitude(row):\n",
+        "  try:\n",
+        "    query = row['station_address'] + \", India\"\n",
+        "    result = geocoder.geocode(query)\n",
+        "    time.sleep(3)\n",
+        "    if location and len(result):\n",
+        "        return pd.Series({'latitude': result[0]['geometry']['lat'], 'longitude': result[0]['geometry']['lng']})\n",
+        "    else:\n",
+        "        return pd.Series({'latitude': None, 'longitude': None})\n",
+        "  except:\n",
+        "    return pd.Series({'latitude': None, 'longitude': None})"
+      ],
+      "metadata": {
+        "id": "l5iQgK2jNukp"
+      },
+      "id": "l5iQgK2jNukp",
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1353,7 +1388,7 @@
     {
       "cell_type": "code",
       "source": [
-        "retry_df[retry_df['latitude'].isna()]['station_address'].to_csv('/content/drive/MyDrive/ML_Dataset/AQI_2010_2023_updated/stations_with_missing.csv', index=False)"
+        "retry_df[retry_df['latitude'].isna()]"
       ],
       "metadata": {
         "id": "fe6sv6q1A8OU"
@@ -1361,37 +1396,6 @@
       "id": "fe6sv6q1A8OU",
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "geolocator = Nominatim(user_agent=\"my_osm_geocoder\")\n",
-        "\n",
-        "location = geolocator.geocode(\"GVM Corporation, Dabagardens, Visakhapatnam, Andhra Pradesh, 530020, India\")\n",
-        "\n",
-        "if location:\n",
-        "    print(f\"Latitude: {location.latitude}, Longitude: {location.longitude}\")\n",
-        "else:\n",
-        "    print(\"Location not found\")"
-      ],
-      "metadata": {
-        "id": "QaYNpqQgCuhg",
-        "outputId": "9e4d4722-2dd4-4a44-9454-dd3f92aab3cc",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "id": "QaYNpqQgCuhg",
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Location not found\n"
-          ]
-        }
-      ]
     }
   ],
   "metadata": {
